# wow-toc-updater

./: README.md  action.yml  build_bundle.py  pyproject.toml
.github/workflows/: license.yml  pr-checks.yml
.trunk/: trunk.yaml
tests/: conftest.py  test_constants.py  test_content_updater.py  test_file_processor.py  test_update.py  test_version_resolver.py
toc_interface_updater/: cli.py  constants.py  content_updater.py  file_processor.py  types.py  update.py  version_client.py
